# EquiAnalytica-main

./: .gitignore  LICENSE  README.md  pyproject.toml
stock_analysis_agent/: __init__.py  agent.py  callbacks.py  config.py  prompt.py  tools.py
stock_analysis_agent/sub_agents/fund_agent/: __init__.py  agent.py  prompt.py  tools.py
stock_analysis_agent/sub_agents/fundamental_agent/: __init__.py  agent.py  prompt.py  tools.py
stock_analysis_agent/sub_agents/policy_agent/: agent.py  prompt.py  tools.py
stock_analysis_agent/sub_agents/technical_agent/: __init__.py  agent.py  prompt.py  tools.py
